prepare root-pom.xml for Spring sub-modules